index.css
h1, h2, h3, h4 {
    line-height: 1.2;
    text-align: center;
}

h2 {
    padding-top: 10% ;
}

h3 {
    padding: 2%;
    background-color: #00B4D8;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 20px;
    color: #f8f2f8;
    background-color: #0096C7;
    margin: 0 20% 10% 20%;
    line-height: 1.5;
    padding: 10px 0;
    max-width:75%;
}

p {
    padding: 2%;
    width: 90%;
    height: 75%;
}

footer {
    margin-top: 5%;
    background-color: #00B4D8;
}

.navigation-bar{
    font-weight: 600;
    display: flex;
    background-color: #0077B6;
    justify-content: center;
}

.navigation-bar a {
    color: #F2FDFF;
    text-decoration: none;
    padding: 10px;
}

a:hover {
    color: #634c79;
    transition: ease-in 0.25s;
}

.main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 75%;
    margin-left: 15%;
}

aside{
    font-size: small;
    font-style: italic;
}

@media (max-width: 840px) {
    /* Turn this into a drop down menu */
    .navigation-bar {
        text-align: center;
        flex-direction: column;
        margin: 0;
        max-width: 100%;
    }

    .navigation-bar a{

        border: 1px solid #CAF0F8;
    }

    .main {
        flex-direction: column;
        justify-content: center;
    }

    .main div {
        max-width: 100%;
        margin: 0;
        padding: 0;
    }

    p {
        width: auto;
    }
}

